Matchmaking join_leave fix

--- a/pong-frontend/styles.css
+++ b/pong-frontend/styles.css
@@ -42,6 +42,7 @@ body {
 		margin-top: 25px;
 		display: flex;
 		justify-content: center;
+		/* cursor: default; */
 	}
 	
 	.divider{
@@ -109,7 +110,7 @@ body {
 
 	.loader {
 		text-align:center;
-		display: none;
+		display: inline-block;
 		border: 8px solid #f3f3f3; /* Light grey */
 		border-top: 8px solid #3498db; /* Blue */
 		border-radius: 50%;
